--- a/manifests/deployments.yaml
+++ b/manifests/deployments.yaml
@@ -18,7 +18,7 @@ spec:
       topologySpreadConstraints:
         - maxSkew: 1
           topologyKey: zone
-          whenUnsatisfiable: DoNotSchedule
+          whenUnsatisfiable: ScheduleAnyway
           labelSelector:
             matchLabels:
               app: application
@@ -32,6 +32,11 @@ spec:
                 - ALL
             readOnlyRootFilesystem: true
           imagePullPolicy: IfNotPresent
+
+          startupProbe:
+            httpGet:
+              port: 5678
+
           resources:
             requests:
               memory: 96Mi
